  (https://github.com/csmith/goplum/issues/34[#34])
** All results will get a `check_time` fact by default, containing the time
   the check took to execute.

=== Changes

* Checks can implement the `LongRunning` interface if they intentionally run
  over long periods of time. This allows them to extend the default timeout
  based on their own unique configuration.

== v0.5.0

=== Features

* Added `smtp` plugin to send alerts by e-mail
  (https://github.com/csmith/goplum/issues/4[#4])
* Added `msteams` plugin for sending messages to
  Microsoft Teams.
* Added `discord` plugin to send alerts to Discord
  (https://github.com/csmith/goplum/issues/16[#16])
* Added `snmp` plugin to check values from SNMP
  (https://github.com/csmith/goplum/issues/26[#26])
* The `http.get` check now allows you to specify a range of
  acceptable status codes, which lets you check that a URL
  returns an error.

=== Changes

* Docker images now include a `/notices` directory containing
  copyright information for all compiled code.
* The `Config` field in the `AlertDetails` struct passed to
  alerts is now correctly populated.
* The gRPC API and the `plumctl` client now require TLS 1.3
  or greater.
* Goplum is now compiled with Golang 1.16.
* Goplum is now stricter about validating its configuration
  on startup:
** Checks can no longer have invalid alerts (i.e., an
   `alerts` property that doesn't match any configured alert).
   (https://github.com/csmith/goplum/issues/36[#36])
** Only one "defaults" block may exist in the configuration file.
   (https://github.com/csmith/goplum/issues/37[#37])

== v0.4.0

=== Features

* Verbose logging can now be suppressed with the quiet flag
  (https://github.com/csmith/goplum/issues/29[#29])
* GoPlum now exposes a gRPC API to allow for custom tooling
  and integration with other services.
  See the link:docs/api.adoc[API docs] for further information.
  (https://github.com/csmith/goplum/issues/30[#30])