@@ -1,0 +1,11 @@
+defaults {
+    ints = [1, 2, 3, 4,]
+    strings = ["a", "b", "c", ",", "d"]
+    floats = [1.3, 1.4, 1.5]
+    durations = [1s, 3m, 1d]
+    bools = [
+        true, # Comment here
+        false,yes,
+        no
+    ]
+}
