@@ -1,0 +1,36 @@
+{
+  "DefaultSettings": {
+    "bools": [
+      true,
+      false,
+      true,
+      false
+    ],
+    "durations": [
+      1000000000,
+      180000000000,
+      86400000000000
+    ],
+    "floats": [
+      1.3,
+      1.4,
+      1.5
+    ],
+    "ints": [
+      1,
+      2,
+      3,
+      4
+    ],
+    "strings": [
+      "a",
+      "b",
+      "c",
+      ",",
+      "d"
+    ]
+  },
+  "AlertBlocks": null,
+  "CheckBlocks": null,
+  "PluginSettings": null
+}
