@@ -1,0 +1,3 @@
+defaults {
+    arr = [1, true, "oops"]
+}
